--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-*/ .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .card {
-  padding: 2em;
+  width: 500px;
+  background-color: blueviolet;
+  padding: 20px;
+  text-align: center;
+  line-height: 3rem;
+  margin: auto;
+  margin-top: 5rem;
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.totdoHeading {
+  color: red;
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+
+.todoTitle {
+  color: white;
+  font-size: 2rem;
+  text-transform: capitalize;
+
+}
+
+.todoDescription {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.date {
+  color: white;
+  font-size: 2rem;
 }
